Fix uneven spacing

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 .main {
   /* background-color: #eee;#e1b382; */
   margin: auto;
-  width: max-content;
+  /* width: max-content; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,13 +34,14 @@ body {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
   /* background-color: black; */
-  column-gap: 2px;
-  row-gap: 2px;
+  /* column-gap: 2px; */
+  /* row-gap: 2px; */
 }
 
 .emoji {
   font-size: 124px;
   background-color: #eee;
+  outline: 2px solid #12343b;
   transition: transform 0.4s;
   transform: rotateY(180deg);
   transform-style: preserve-3d;
@@ -54,7 +55,7 @@ body {
   bottom: 0px;
   left: 0px;
   right: 0px;
-  background: #eee;
+  background: darkgray;
   transform: rotateY(180deg);
   transform-style: preserve-3d;
   backface-visibility: hidden;
